develop : render data of persons to views

--- a/views/index.html
+++ b/views/index.html
@@ -12,5 +12,11 @@
         <input type="text" name="nom" placeholder="Noms"><br><br>
         <input type="submit" value="Enregistrer">
     </form>
+
+    <p>___________________________________________</p>
+    <h2>Liste des personnes</h2>
+    <ul>
+        
+    </ul>
 </body>
 </html>
