--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bienvenue dans notre site</h1>
     <form action="" method="post" enctype="multipart/form-data">
-        <input type="file" name="upload_file" >
+        <input type="file" name="upload_file" ><br><br>
         <input type="text" name="nom" placeholder="Noms"><br><br>
         <input type="submit" value="Enregistrer">
     </form>
@@ -16,7 +16,9 @@
     <p>___________________________________________</p>
     <h2>Liste des personnes</h2>
     <ul>
-        
+        <% personnes.forEach(personne => { %>
+           <%- include("person_item.html", {personne}) %>
+        <% }) %>
     </ul>
 </body>
 </html>
